@@ -1,11 +1,10 @@
 package com.fmoreno.telegramtaskaiagent.config;
 
+import io.github.cdimascio.dotenv.Dotenv;
+import java.util.Arrays;
 import java.util.List;
 
 public class AllowedEmailsConfig {
-    public static final List<String> ALLOWED_EMAILS = List.of(
-        "allowed1@example.com",
-        "allowed2@example.com",
-        "allowed3@example.com"
-    );
+    private static final Dotenv dotenv = Dotenv.load();
+    public static final List<String> ALLOWED_EMAILS = Arrays.asList(dotenv.get("ALLOWED_EMAILS").split(","));
 }
